2002-06-17  Anders Eriksson  <anders@umunet.org>

	* src/gerbv_screen.h: added msgid for stausbar.
	* src/gerbv.c: Changed coordinate output both in statusbar and
	  in measure mode. Now using mils and mms as units. Coordinates
	  are now correct in respect to the gerber coordinate system
	  (at least that's what I think). Too much information is shown
	  in the statusbar, we will have to add unit selection (either
	  mils or mms). Minor layout change for statusbar (I need to
	  learn gtk layout better!).

2002-06-17  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c: Ignored if lines were using rectangular apertures
	  to draw. Closes bug 567128.

2002-06-13  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screeen.h: Added statusbar, prints cursor
	  position as well as distance when measuring.

2002-06-12  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Fixed autoscale() not to translate image out of
	  window. Happened after fix for negative coordinates. Should
	  translate image to center of window.
	* src/draw.c: Moved setting off err_gc outside loop so it's always 
	  done, even if you don't need it.

2002-06-12  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (draw_zoom_outline): Fix division by zero when
	  drawing a zoom box with no delta y. Closes bug 567166.

2002-06-11  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_file.c: Changed ENODATA to EIO, which is more portable.
	  Closes bug 567179.
	* src/gerbv.c: It is now possible to draw images with negative
	  coordinates. Closes bug 548094.
	* src/draw.[hc],src/draw-amacro.[hc], src/Makefile.am: Split out 
	  aperture macro stuff from draw.c to a separate file, draw_amacro.c.
	* src/draw_amacro.c: Fixed bug when drawing primitive 4 causing
	  rotation to be wrong. Thanks to Jonas (you know who you are) for 
	  the excellent files.
	* src/draw_amacro.c: Changed interpretation of "closed shape" in
	  primitive 4. If first point is the same as the last point it's